# tree-sitter-bibtex

./: Makefile  Package.swift  binding.gyp  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-bibtex.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_bibtex/: __init__.py  binding.c
src/: grammar.json  parser.c
